@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Dictionary {
        + dictionary : JsonObject
        ~ filename : String
        - wordUpdate : LinkedBlockingQueue<Pair<Pair<Integer, String>, String>>
        + getWord()
        + getWordDef()
        + getWordList()
        + removeDef()
        + run()
        + updateDef()
        + updateDef()
        ~ Dictionary()
        ~ Dictionary()
        - performUpdate()
        - saveToDisk()
    }
  }
  

  namespace  {
    class DictionaryServer {
        {static} + main()
        {static} - parse_args()
    }
  }
  

  namespace  {
    class FileUpdater {
        ~ file : File
        ~ timer : Timer
        + run()
        ~ FileUpdater()
    }
  }
  

  namespace  {
    class Server {
        {static} + PORT_DEFAULT : int
        + filename : String
        {static} + numWorkers : int
        + port : int
        ~ numFreeWorkers : AtomicInteger
        - requestQueue : LinkedBlockingQueue<DatagramPacket>
        - workers : WorkerThread[]
        + addQueue()
        + deQueue()
        + freeThread()
        + startServer()
        ~ Server()
    }
  }
  

  namespace  {
    class WorkerThread {
        ~ socket : DatagramSocket
        + run()
        ~ WorkerThread()
        - delDef()
        - getList()
        - getWord()
        - newDef()
        - parse_request()
        - updateDef()
    }
  }
  

  Dictionary o-- FileUpdater : fileUpdater
  FileUpdater -up-|> java.util.TimerTask
  FileUpdater o-- Dictionary : dict
  Server o-- Dictionary : dict
  WorkerThread o-- Dictionary : dict
  WorkerThread o-- Server : source


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
